# -TodayWorkout

./: .gitignore  README.md
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/woolba/dev/today_workout/: MainActivity.kt
flutter_app/ios/: Podfile
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/component/: feed_card.dart
flutter_app/lib/component/data/: feed_item.dart
flutter_app/lib/dummy/data/: feed.dart
flutter_app/lib/screens/: create_feeds_screen.dart  feed_screen.dart  main_screen.dart
flutter_app/linux/: CMakeLists.txt  my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
server/: pyproject.toml
server/common/: exception.py  global_response.py
server/config/: settings.py  urls.py
server/workout_auths/: apps.py  models.py  serializer.py  tests.py  urls.py  views.py
server/workout_auths/migrations/: 0001_initial.py  0002_workoutusermodel_phone_number.py  0003_alter_workoutusermodel_table.py  0004_alter_workoutusermodel_gender.py  0005_remove_workoutusermodel_is_deleted.py
server/workout_users/: apps.py
